link in new tab, change titles and h1

--- a/html/about-ch.html
+++ b/html/about-ch.html
@@ -43,7 +43,7 @@
       gtag('js', new Date());
       gtag('config', 'UA-108713232-1');
     </script>
-    <title>PWCS 2018 | About</title>
+    <title>关于我们 | 宾大沃顿中美峰会 2018</title>
   </head>
   <body>
 
@@ -231,8 +231,8 @@
       <div class="vertical-sub-title mobile-only">
         构筑中美交流的桥梁
       </div>
-      <div class="page-caption black-shadow">
-         关于 <br/> PWCS
+      <div class="black-shadow">
+         <h1 class="page-caption">关于 <br/> PWCS</h1>
       </div>
       <div class="bottom-square">
         <div class="row">
@@ -250,9 +250,9 @@
 <div class="white-bg" id="whitebox">
   <div class="row row-eq-height">
     <div class="col-lg-4 col-sm-12 col-xs-12">
-      <h1 class="title">美国最大的<br>
-        学生运营<br>
-        中美峰会</h1>
+      <h2 class="title">全美最大<br>
+        由学生运营的<br>
+        中美峰会</h2>
     </div>
     <div class="col-lg-8 col-sm-12 hidden-xs">
       <div class="row">
@@ -268,7 +268,7 @@
   </div>
   <div class="row">
     <div class="col-lg-12 col-sm-12 col-xs-12">
-      <h1 id="whycome">为何而来？</h1>
+      <h2 id="whycome">为何参加？</h2>
     </div>
   </div>
 </div>
