--- a/html/about.html
+++ b/html/about.html
@@ -32,7 +32,7 @@
       gtag('js', new Date());
       gtag('config', 'UA-108713232-1');
     </script>
-    <title>PWCS 2018 | About</title>
+    <title>ABOUT US | Penn Wharton China Summit 2018</title>
   </head>
   <body>
 
@@ -96,7 +96,7 @@
                 MENU
               </div>
               <div class="nav-custom-item right-txt register-item">
-                <a href="https://whartonchinasummit.ticketleap.com/">
+                <a href="https://whartonchinasummit.ticketleap.com/" target="_blank">
                   REGISTER
                   <i class="icofont icofont-dotted-right"></i>
                 </a>
@@ -108,7 +108,7 @@
       <div class="container mobile-only">
         <div class="row height-100">
           <div class="col-5 register-item">
-            <a href="https://whartonchinasummit.ticketleap.com/">
+            <a href="https://whartonchinasummit.ticketleap.com/" target="_blank">
               REGISTER
               <i class="icofont icofont-dotted-right"></i>
             </a>
@@ -134,7 +134,7 @@
       <div class="vertical-center mobile-hide">
         <div class="row center-txt">
           <div class="col-12">
-            <a href="https://whartonchinasummit.ticketleap.com/"><div class="navigation-action-btn">Register</div></a>
+            <a href="https://whartonchinasummit.ticketleap.com/" target="_blank"><div class="navigation-action-btn">Register</div></a>
           </div>
         </div>
         <div class="row">
@@ -150,28 +150,28 @@
         <div class="row center-txt">
           <div class="col-4 offset-2 col-md-2 offset-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://www.facebook.com/whartonPWCS">
+              <a href="https://www.facebook.com/whartonPWCS" target="_blank">
                 <i class="icofont icofont-social-facebook"></i>
               </a>
             </div>
           </div>
           <div class="col-4 col-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="../assets/images/wechat-code.jpeg">
+              <a href="../assets/images/wechat-code.jpeg" target="_blank">
                 <i class="icofont icofont-social-wechat"></i>
               </a>
             </div>
           </div>
           <div class="col-4 offset-2 col-md-2 offset-md-0 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://weibo.com/whartonchinasummit">
+              <a href="https://weibo.com/whartonchinasummit" target="_blank">
                 <i class="icofont icofont-social-weibo"></i>
               </a>
             </div>
           </div>
           <div class="col-4 col-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="mailto:official@whartonsummit.org">
+              <a href="mailto:official@whartonsummit.org" target="_blank">
                 <i class="icofont icofont-email"></i>
               </a>
             </div>
@@ -192,7 +192,7 @@
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="/panels">Speakers</a> </div>
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/agenda">Agenda</a> </div>
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/past">Past</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-6"> <a href="https://whartonchinasummit.ticketleap.com/">Register</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-6"> <a href="https://whartonchinasummit.ticketleap.com/" target="_blank">Register</a> </div>
           </div>
         </div>
         <div class="row hide" id="m-close-nav">
@@ -219,19 +219,19 @@
       <div class="left-square"></div>
       <div class="sub-title">April.13th - 15th<br/>University of Pennsylvania</div>
       <div class="vertical-sub-title mobile-hide">
-        A Summit that builds the bridge between us
+        To Build the Bridge Between Us
       </div>
       <div class="vertical-sub-title mobile-only">
         To Build the Bridge Between Us
       </div>
-      <div class="page-caption black-shadow">
-         ABOUT <br/> PWCS
+      <div class="black-shadow">
+         <h1 class="page-caption">ABOUT <br/> PWCS</h1>
       </div>
       <div class="bottom-square">
         <div class="row">
           <div class="col-10 white-txt crimson-bg ls-1" style="letter-spacing: 3px;">REGISTER</div>
           <div class="col-2 white-bg action-area">
-            <a href="https://whartonchinasummit.ticketleap.com/" class="black-txt"><i class="icofont icofont-dotted-right"></i></a>
+            <a href="https://whartonchinasummit.ticketleap.com/" target="_blank" class="black-txt"><i class="icofont icofont-dotted-right"></i></a>
           </div>
         </div>
       </div>
@@ -243,9 +243,9 @@
 <div class="white-bg" id="whitebox">
   <div class="row row-eq-height">
     <div class="col-lg-4 col-sm-12 col-xs-12">
-      <h1 class="title">The Largerst<br>
+      <h2 class="title">The Largerst<br>
         Student-run Sino-US Conference<br>
-        in the U.S.</h1>
+        in the U.S.</h2>
     </div>
     <div class="col-lg-8 col-sm-12 hidden-xs">
       <div class="row">
@@ -285,7 +285,7 @@
   </div>
   <div class="row">
     <div class="col-lg-12 col-sm-12 col-xs-12">
-      <h1 id="whycome">WHY COME?</h1>
+      <h2 id="whycome">WHY COME?</h2>
     </div>
   </div>
 </div>
@@ -412,8 +412,8 @@
         <h4>Zhilei Zheng</h4>
         <h5>Technology Director</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/zhileiz/"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
-          <a href="http://www.zhileiz.com/"><i class="icofont icofont-link-alt"></i></a>
+          <a href="https://www.linkedin.com/in/zhileiz/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+          <a href="http://www.zhileiz.com/" target="_blank"><i class="icofont icofont-link-alt"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -461,7 +461,7 @@
         <h4>Menglu Zhang</h4>
         <h5>Finance Chair</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/menglu-zhang-199999112/"><i class="icofont icofont-social-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/menglu-zhang-199999112/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -494,7 +494,7 @@
         <h4>David Chen</h4>
         <h5>Member</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/davidchenpenn/"><i class="icofont icofont-social-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/davidchenpenn/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -502,7 +502,7 @@
         <h4>Rachel Wu</h4>
         <h5>Member</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/rachelyueqiwu/"><i class="icofont icofont-social-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/rachelyueqiwu/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -510,8 +510,8 @@
         <h4>Jipeng Tony Liu</h4>
         <h5>Member</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/jipeng-liu-85b5419b"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
-          <a href="https://www.facebook.com/profile.php?id=100009588560522"><i class="icofont icofont-social-facebook"></i></a>
+          <a href="https://www.linkedin.com/in/jipeng-liu-85b5419b" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+          <a href="https://www.facebook.com/profile.php?id=100009588560522" target="_blank"><i class="icofont icofont-social-facebook"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -534,7 +534,7 @@
         <h4>Echo Zeng</h4>
         <h5>Member</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/echo-zeng-8848258b"><i class="icofont icofont-social-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/echo-zeng-8848258b" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -542,8 +542,8 @@
         <h4>Samuel Kang</h4>
         <h5>Member</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/kangsamuel/"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
-          <a href="https://www.facebook.com/kang.samuel"><i class="icofont icofont-social-facebook"></i></a>
+          <a href="https://www.linkedin.com/in/kangsamuel/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+          <a href="https://www.facebook.com/kang.samuel" target="_blank"><i class="icofont icofont-social-facebook"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -556,7 +556,7 @@
         <h4>Yilin Elina Ma</h4>
         <h5>Member</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/yilin-elina-ma-29a5a1138/"><i class="icofont icofont-social-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/yilin-elina-ma-29a5a1138/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -564,7 +564,7 @@
         <h4>Kitty Chen</h4>
         <h5>Member</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/chen-kitty-154925134"><i class="icofont icofont-social-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/chen-kitty-154925134" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -622,8 +622,8 @@
         <h4>Sai William Ma</h4>
         <h5>Member</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/sai-ma-2909a813a"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
-          <a href="https://www.facebook.com/saima1998"><i class="icofont icofont-social-facebook"></i></a>
+          <a href="https://www.linkedin.com/in/sai-ma-2909a813a" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+          <a href="https://www.facebook.com/saima1998" target="_blank"><i class="icofont icofont-social-facebook"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -646,7 +646,7 @@
         <h4>Mindy Ma</h4>
         <h5>Member</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/mindy-ma-5058ba150/"><i class="icofont icofont-social-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/mindy-ma-5058ba150/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -654,7 +654,7 @@
         <h4>Lula Chou</h4>
         <h5>Member</h5>
         <div class="links">
-          <a href="https://m.facebook.com/fia.waters"><i class="icofont icofont-social-facebook"></i></a>
+          <a href="https://m.facebook.com/fia.waters" target="_blank"><i class="icofont icofont-social-facebook"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -662,8 +662,8 @@
         <h4>Michelle Cai</h4>
         <h5>Member</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/michelle-cai-a87400149/"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
-          <a href="https://www.facebook.com/Michelle.Cai04"><i class="icofont icofont-social-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/michelle-cai-a87400149/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+          <a href="https://www.facebook.com/Michelle.Cai04" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -686,7 +686,7 @@
         <h4>Yi Yang</h4>
         <h5>Vice Chair</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/yi-yang-378a989b/"><i class="icofont icofont-social-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/yi-yang-378a989b/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -694,7 +694,7 @@
         <h4>Ying Chen</h4>
         <h5>Vice Chair</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/ying-chen-959202126/"><i class="icofont icofont-social-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/ying-chen-959202126/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -717,7 +717,7 @@
         <h4>Cecilia Wang</h4>
         <h5>Member</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/yixi-wang-272087158/"><i class="icofont icofont-social-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/yixi-wang-272087158/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -725,7 +725,7 @@
         <h4>Lei Wang</h4>
         <h5>Member</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/lei-wang-084a64158/"><i class="icofont icofont-social-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/lei-wang-084a64158/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -733,8 +733,8 @@
         <h4>Lisa Yijie Zhao</h4>
         <h5>Member</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/lisa-zhao-48093b146/"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
-          <a href="https://www.facebook.com/lisa.zhao.1485"><i class="icofont icofont-social-facebook"></i></a>
+          <a href="https://www.linkedin.com/in/lisa-zhao-48093b146/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+          <a href="https://www.facebook.com/lisa.zhao.1485" target="_blank"><i class="icofont icofont-social-facebook"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -767,7 +767,7 @@
         <h4>Xiaoya Song</h4>
         <h5>Vice Chair</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/xiaoya-sabrina-song-b0919b127/"><i class="icofont icofont-social-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/xiaoya-sabrina-song-b0919b127/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -780,7 +780,7 @@
         <h4>Chelsie Xu</h4>
         <h5>Member</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/chelsie-xu-532951149/"><i class="icofont icofont-social-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/chelsie-xu-532951149/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -788,7 +788,7 @@
         <h4>Shangting Sun</h4>
         <h5>Member</h5>
         <div class="links">
-          <a href="https://www.facebook.com/lucy.sun.16"><i class="icofont icofont-social-facebook"></i></a>
+          <a href="https://www.facebook.com/lucy.sun.16" target="_blank"><i class="icofont icofont-social-facebook"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -796,8 +796,8 @@
         <h4>Claire Yu</h4>
         <h5>Member</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/claire-yu-b4799b155/"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
-          <a href="https://www.facebook.com/yu.r.claire"><i class="icofont icofont-social-facebook"></i></a>
+          <a href="https://www.linkedin.com/in/claire-yu-b4799b155/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+          <a href="https://www.facebook.com/yu.r.claire" target="_blank"><i class="icofont icofont-social-facebook"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -805,8 +805,8 @@
         <h4>Ellen Hua</h4>
         <h5>Member</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/ellen-yiting-hua-2901b8133/"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
-          <a href="https://www.facebook.com/yiting.hua.7"><i class="icofont icofont-social-facebook"></i></a>
+          <a href="https://www.linkedin.com/in/ellen-yiting-hua-2901b8133/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+          <a href="https://www.facebook.com/yiting.hua.7" target="_blank"><i class="icofont icofont-social-facebook"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -814,8 +814,8 @@
         <h4>Cynthia Li</h4>
         <h5>Member</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/yun-cynthia-li-74b305149/"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
-          <a href="https://www.facebook.com/cynthia.li.5817"><i class="icofont icofont-social-facebook"></i></a>
+          <a href="https://www.linkedin.com/in/yun-cynthia-li-74b305149/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+          <a href="https://www.facebook.com/cynthia.li.5817" target="_blank"><i class="icofont icofont-social-facebook"></i></a>
         </div>
       </div>
     </div>
@@ -848,8 +848,8 @@
         <h4>Carol Zhou</h4>
         <h5>Member</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/%E9%9D%B3%E5%BA%B7-%E5%91%A8-b14263119/"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
-          <a href="https://m.facebook.com/karol.zhou.9?ref=wizard"><i class="icofont icofont-social-facebook"></i></a>
+          <a href="https://www.linkedin.com/in/%E9%9D%B3%E5%BA%B7-%E5%91%A8-b14263119/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+          <a href="https://m.facebook.com/karol.zhou.9?ref=wizard" target="_blank"><i class="icofont icofont-social-facebook"></i></a>
         </div>
       </div>
     </div>
