--- a/html/home-ch.html
+++ b/html/home-ch.html
@@ -58,7 +58,7 @@
       gtag('js', new Date());
       gtag('config', 'UA-108713232-1');
     </script>
-    <title>宾大沃顿中美峰会 | 2018</title>
+    <title>宾大沃顿中美峰会2018：我们这一代</title>
   </head>
   <body>
 
@@ -122,7 +122,7 @@
                 菜单
               </div>
               <div class="nav-custom-item right-txt register-item">
-                <a href="https://whartonchinasummit.ticketleap.com/2018pwcs/">
+                <a href="https://whartonchinasummit.ticketleap.com/2018pwcs/" target="_blank">
                   立即订票
                   <i class="icofont icofont-dotted-right"></i>
                 </a>
@@ -134,7 +134,7 @@
       <div class="container mobile-only">
         <div class="row height-100">
             <div class="col-5 register-item">
-              <a href="https://whartonchinasummit.ticketleap.com/2018pwcs/" class="register-item">
+              <a href="https://whartonchinasummit.ticketleap.com/2018pwcs/" class="register-item" target="_blank">
               订票
               <i class="icofont icofont-dotted-right"></i>
               </a>
@@ -158,7 +158,7 @@
       <div class="vertical-center mobile-hide">
         <div class="row center-txt">
           <div class="col-12">
-            <a href="https://whartonchinasummit.ticketleap.com/2018pwcs/"><div class="navigation-action-btn">立即购票</div></a>
+            <a href="https://whartonchinasummit.ticketleap.com/2018pwcs/" target="_blank"><div class="navigation-action-btn">立即购票</div></a>
           </div>
         </div>
         <div class="row">
@@ -174,28 +174,28 @@
         <div class="row center-txt">
           <div class="col-4 offset-2 col-md-2 offset-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://www.facebook.com/whartonPWCS">
+              <a href="https://www.facebook.com/whartonPWCS" target="_blank">
                 <i class="icofont icofont-social-facebook"></i>
               </a>
             </div>
           </div>
           <div class="col-4 col-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="../assets/images/wechat-code.jpeg">
+              <a href="../assets/images/wechat-code.jpeg" target="_blank">
                 <i class="icofont icofont-social-wechat"></i>
               </a>
             </div>
           </div>
           <div class="col-4 offset-2 col-md-2 offset-md-0 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://weibo.com/whartonchinasummit">
+              <a href="https://weibo.com/whartonchinasummit" target="_blank">
                 <i class="icofont icofont-social-weibo"></i>
               </a>
             </div>
           </div>
           <div class="col-4 col-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="mailto:official@whartonsummit.org">
+              <a href="mailto:official@whartonsummit.org" target="_blank">
                 <i class="icofont icofont-email"></i>
               </a>
             </div>
@@ -216,7 +216,7 @@
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="/panels-ch">参会嘉宾</a> </div>
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/agenda-ch">峰会日程</a> </div>
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/past-ch">往届峰会</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-6"> <a href="https://whartonchinasummit.ticketleap.com/2018pwcs/">立即订票</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-6"> <a href="https://whartonchinasummit.ticketleap.com/2018pwcs/" target="_blank">立即订票</a> </div>
           </div>
         </div>
         <div class="row hide" id="m-close-nav">
@@ -249,7 +249,7 @@
         <div class="row">
           <div class="col-10 white-txt crimson-bg ls-1" style="letter-spacing: 3px;">立即订票</div>
           <div class="col-2 white-bg action-area">
-            <a href="https://whartonchinasummit.ticketleap.com/2018pwcs/" class="black-txt"><i class="icofont icofont-dotted-right"></i></a>
+            <a href="https://whartonchinasummit.ticketleap.com/2018pwcs/" target="_blank" class="black-txt"><i class="icofont icofont-dotted-right"></i></a>
           </div>
         </div>
       </div>
@@ -700,7 +700,7 @@
           <div class="row height-80 height-70-mobile">
             <div class="col-3 center-txt">
               <div class="vertical-center contact-icon">
-                <a href="https://www.facebook.com/whartonPWCS">
+                <a href="https://www.facebook.com/whartonPWCS" target="_blank">
                 <i class="icofont icofont-social-facebook"></i><br/>
                 <span class="txt-4-icon">脸书</span>
                 </a>
@@ -708,7 +708,7 @@
             </div>
             <div class="col-3 center-txt">
               <div class="vertical-center contact-icon">
-                <a href="../assets/images/wechat-code.jpeg">
+                <a href="../assets/images/wechat-code.jpeg" target="_blank">
                 <i class="icofont icofont-social-wechat"></i><br/>
                 <span class="txt-4-icon">微信<span class="mobile-hide">公众号</span></span>
               </a>
@@ -716,7 +716,7 @@
             </div>
             <div class="col-3 center-txt">
               <div class="vertical-center contact-icon">
-                <a href="https://weibo.com/whartonchinasummit">
+                <a href="https://weibo.com/whartonchinasummit" target="_blank">
                 <i class="icofont icofont-social-weibo"></i><br/>
                 <span class="txt-4-icon"><span class="mobile-hide">新浪</span>微博</span>
                 </a>
@@ -724,7 +724,7 @@
             </div>
             <div class="col-3 center-txt">
               <div class="vertical-center contact-icon">
-                <a href="mailto:official@whartonsummit.org">
+                <a href="mailto:official@whartonsummit.org" target="_blank">
                 <i class="icofont icofont-ui-email"></i><br/>
                 <span class="txt-4-icon">邮件<span class="mobile-hide"></span></span>
                 </a>
