--- a/html/home.html
+++ b/html/home.html
@@ -32,7 +32,7 @@
       gtag('js', new Date());
       gtag('config', 'UA-108713232-1');
     </script>
-    <title>PWCS 2018 | Home Page</title>
+    <title>Penn Wharton China Summit 2018: OUR GENERATION</title>
   </head>
   <body>
 
@@ -94,7 +94,7 @@
                 MENU
               </div>
               <div class="nav-custom-item right-txt register-item">
-                <a href="https://whartonchinasummit.ticketleap.com/2018pwcs/">
+                <a href="https://whartonchinasummit.ticketleap.com/2018pwcs/" target="_blank">
                   REGISTER
                   <i class="icofont icofont-dotted-right"></i>
                 </a>
@@ -106,7 +106,7 @@
       <div class="container mobile-only">
         <div class="row height-100">
           <div class="col-5 register-item">
-            <a href="https://whartonchinasummit.ticketleap.com/2018pwcs/">
+            <a href="https://whartonchinasummit.ticketleap.com/2018pwcs/" target="_blank">
               REGISTER
               <i class="icofont icofont-dotted-right"></i>
             </a>
@@ -130,7 +130,7 @@
       <div class="vertical-center mobile-hide">
         <div class="row center-txt">
           <div class="col-12">
-            <a href="https://whartonchinasummit.ticketleap.com/2018pwcs/"><div class="navigation-action-btn">Register</div></a>
+            <a href="https://whartonchinasummit.ticketleap.com/2018pwcs/" target="_blank"><div class="navigation-action-btn">Register</div></a>
           </div>
         </div>
         <div class="row">
@@ -146,28 +146,28 @@
         <div class="row center-txt">
           <div class="col-4 offset-2 col-md-2 offset-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://www.facebook.com/whartonPWCS">
+              <a href="https://www.facebook.com/whartonPWCS" target="_blank">
                 <i class="icofont icofont-social-facebook"></i>
               </a>
             </div>
           </div>
           <div class="col-4 col-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="../assets/images/wechat-code.jpeg">
+              <a href="../assets/images/wechat-code.jpeg" target="_blank">
                 <i class="icofont icofont-social-wechat"></i>
               </a>
             </div>
           </div>
           <div class="col-4 offset-2 col-md-2 offset-md-0 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://weibo.com/whartonchinasummit">
+              <a href="https://weibo.com/whartonchinasummit" target="_blank">
                 <i class="icofont icofont-social-weibo"></i>
               </a>
             </div>
           </div>
           <div class="col-4 col-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="mailto:official@whartonsummit.org">
+              <a href="mailto:official@whartonsummit.org" target="_blank">
                 <i class="icofont icofont-email"></i>
               </a>
             </div>
@@ -188,7 +188,7 @@
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="/panels">Speakers</a> </div>
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/agenda">Agenda</a> </div>
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/past">Past</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-6"> <a href="/past">Register</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-6"> <a href="https://whartonchinasummit.ticketleap.com/2018pwcs/" target="_blank">Register</a> </div>
           </div>
         </div>
         <div class="row hide" id="m-close-nav">
@@ -209,19 +209,19 @@
       <div class="left-square"></div>
       <div class="sub-title">April.13th - 15th<br/>University of Pennsylvania</div>
       <div class="vertical-sub-title mobile-hide">
-        A Summit that builds the bridge between us
+        To Build the Bridge Between Us
       </div>
       <div class="vertical-sub-title mobile-only">
         To Build the Bridge Between Us
       </div>
-      <div class="site-caption black-shadow">
+      <h1 class="site-caption black-shadow">
         Penn <br/>Wharton<br/>China <br/>Summit
-      </div>
+      </h1>
       <div class="bottom-square">
         <div class="row">
           <div class="col-10 white-txt crimson-bg ls-1" style="letter-spacing: 3px;">REGISTER</div>
           <div class="col-2 white-bg action-area">
-            <a href="https://whartonchinasummit.ticketleap.com/2018pwcs/" class="black-txt"><i class="icofont icofont-dotted-right"></i></a>
+            <a href="https://whartonchinasummit.ticketleap.com/2018pwcs/" target="_blank" class="black-txt"><i class="icofont icofont-dotted-right"></i></a>
           </div>
         </div>
       </div>
@@ -487,7 +487,7 @@
         </div>
         <div class="col-12 col-md-8 offset-md-1 panel-desc hide" class="hover-show mobile-hide" id="pdesc-1">
           <div class="vertical-center-m">
-            <h1 class="mobile-hide"> FINANCE </h1>
+            <h2 class="mobile-hide"> FINANCE </h2>
             <p>
               For the past decade, low real interest rates, declining productivity growth, and lack of attractive domestic investment opportunities have forced global investors to seek higher returns in less familiar territories.
             </p>
@@ -502,7 +502,7 @@
         </div>
         <div class="col-12 col-md-8 offset-md-1 panel-desc hide" id="pdesc-2">
           <div class="vertical-center-m">
-            <h1 class="mobile-hide"> I.R. </h1>
+            <h2 class="mobile-hide"> I.R. </h2>
             <p>
               As the world’s two of world’s largest economic entities, how could United States and China avoid the “Thucydides Trap”— recurrent conflicts between the existing and rising powers.
             </p>
@@ -514,7 +514,7 @@
         </div>
         <div class="col-12 col-md-8 offset-md-1 panel-desc hide" id="pdesc-3">
           <div class="vertical-center-m">
-            <h1 class="mobile-hide"> TECHNOLOGY </h1>
+            <h2 class="mobile-hide"> TECHNOLOGY </h2>
             <p>
               The emergence of Fintech characterized by the convergence of technology and finance has fostered a new wave of transformation in China’s financial market.
             </p>
@@ -529,7 +529,7 @@
         </div>
         <div class="col-12 col-md-8 offset-md-1 panel-desc hide" id="pdesc-4">
           <div class="vertical-center-m">
-            <h1 class="mobile-hide"> REAL ESTATES </h1>
+            <h2 class="mobile-hide"> REAL ESTATES </h2>
             <p>
               Recently, the increasing rate of Chinese real estate industry has been declining. While the market started rejuvenating in first-tier metropolis, markets in second or third-tier cities didn’t see as much an improvement. Facing such a stagnant market, how traditional real-estate companies should innovate became a widely-discussed issue.
             </p>
@@ -541,7 +541,7 @@
         </div>
         <div class="col-12 col-md-8 offset-md-1 panel-desc hide" id="pdesc-5">
           <div class="vertical-center-m">
-            <h1 class="mobile-hide"> SOCIAL </h1>
+            <h2 class="mobile-hide"> SOCIAL </h2>
             <p>
               "Our generation" is not only one that excels in innovation and dares to challenge, but also a generation that assumes social responsibility while practicing sustainable development.
             </p>
@@ -556,7 +556,7 @@
         </div>
         <div class="col-12 col-md-8 offset-md-1 panel-desc hide" id="pdesc-6">
           <div class="vertical-center-m">
-            <h1 class="mobile-hide"> ENTERTAINMENT </h1>
+            <h2 class="mobile-hide"> ENTERTAINMENT </h2>
             <p>
               As the Chinese entertainment and fashion industries have matured over recent years, talent-centered mode of production and new media-focused means of distribution have and will continue to disrupt Chinese entertainment. In fashion, on the other hand, celebrities have become the “new faces” in fashion shows, advertisements and magazines covers.
             </p>
@@ -679,7 +679,7 @@
           <div class="row height-80 height-70-mobile">
             <div class="col-3 center-txt">
               <div class="vertical-center contact-icon">
-                <a href="https://www.facebook.com/whartonPWCS">
+                <a href="https://www.facebook.com/whartonPWCS" target="_blank">
                 <i class="icofont icofont-social-facebook"></i><br/>
                 <span class="txt-4-icon">Facebook</span>
                 </a>
@@ -687,7 +687,7 @@
             </div>
             <div class="col-3 center-txt">
               <div class="vertical-center contact-icon">
-                <a href="../assets/images/wechat-code.jpeg">
+                <a href="../assets/images/wechat-code.jpeg" target="_blank">
                 <i class="icofont icofont-social-wechat"></i><br/>
                 <span class="txt-4-icon">WeChat</span>
               </a>
@@ -695,7 +695,7 @@
             </div>
             <div class="col-3 center-txt">
               <div class="vertical-center contact-icon">
-                <a href="https://weibo.com/whartonchinasummit">
+                <a href="https://weibo.com/whartonchinasummit" target="_blank">
                 <i class="icofont icofont-social-weibo"></i><br/>
                 <span class="txt-4-icon"><span class="mobile-hide">Sina</span> Weibo</span>
                 </a>
@@ -703,7 +703,7 @@
             </div>
             <div class="col-3 center-txt">
               <div class="vertical-center contact-icon">
-                <a href="mailto:official@whartonsummit.org">
+                <a href="mailto:official@whartonsummit.org" target="_blank">
                 <i class="icofont icofont-ui-email"></i><br/>
                 <span class="txt-4-icon">Email<span class="mobile-hide"> Us</span></span>
                 </a>
