--- a/html/speakers.html
+++ b/html/speakers.html
@@ -33,7 +33,7 @@
       gtag('js', new Date());
       gtag('config', 'UA-108713232-1');
     </script>
-    <title>PWCS 2018 | Speakers</title>
+    <title>SPEAKERS | Penn Wharton China Summit 2018</title>
   </head>
   <body>
 
