--- a/html/agenda.html
+++ b/html/agenda.html
@@ -32,7 +32,7 @@
       gtag('js', new Date());
       gtag('config', 'UA-108713232-1');
     </script>
-    <title>PWCS 2018 | Agenda</title>
+    <title>AGENDA | Penn Wharton China Summit 2018</title>
   </head>
   <body>
 
@@ -94,7 +94,7 @@
                 MENU
               </div>
               <div class="nav-custom-item right-txt register-item">
-                <a href="https://whartonchinasummit.ticketleap.com/2018pwcs">
+                <a href="https://whartonchinasummit.ticketleap.com/2018pwcs" target="_blank">
                   REGISTER
                   <i class="icofont icofont-dotted-right"></i>
                 </a>
@@ -106,7 +106,7 @@
       <div class="container mobile-only">
         <div class="row height-100">
           <div class="col-5 register-item">
-            <a href="https://whartonchinasummit.ticketleap.com/2018pwcs">
+            <a href="https://whartonchinasummit.ticketleap.com/2018pwcs" target="_blank">
               REGISTER
               <i class="icofont icofont-dotted-right"></i>
             </a>
@@ -130,7 +130,7 @@
       <div class="vertical-center mobile-hide">
         <div class="row center-txt">
           <div class="col-12">
-            <a href="https://whartonchinasummit.ticketleap.com/2018pwcs"><div class="navigation-action-btn">Register</div></a>
+            <a href="https://whartonchinasummit.ticketleap.com/2018pwcs" target="_blank"><div class="navigation-action-btn">Register</div></a>
           </div>
         </div>
         <div class="row">
@@ -146,28 +146,28 @@
         <div class="row center-txt">
           <div class="col-4 offset-2 col-md-2 offset-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://www.facebook.com/whartonPWCS">
+              <a href="https://www.facebook.com/whartonPWCS" target="_blank">
                 <i class="icofont icofont-social-facebook"></i>
               </a>
             </div>
           </div>
           <div class="col-4 col-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="../assets/images/wechat-code.jpeg">
+              <a href="../assets/images/wechat-code.jpeg" target="_blank">
                 <i class="icofont icofont-social-wechat"></i>
               </a>
             </div>
           </div>
-          <div class="col-4 offset-2 col-md-2 offset-md-0 center-txt">
+          <div class="col-4 offset-2 col-md-2 offset-md-0 center-txt" target="_blank">
             <div class="nav-social-item center-txt">
-              <a href="https://weibo.com/whartonchinasummit">
+              <a href="https://weibo.com/whartonchinasummit" target="_blank">
                 <i class="icofont icofont-social-weibo"></i>
               </a>
             </div>
           </div>
           <div class="col-4 col-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="mailto:official@whartonsummit.org">
+              <a href="mailto:official@whartonsummit.org" target="_blank">
                 <i class="icofont icofont-email"></i>
               </a>
             </div>
@@ -188,7 +188,7 @@
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="./panels.html">Speakers</a> </div>
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-5"> <a class="active-item" href="./agenda.html">Agenda</a> <i class="icofont icofont-dotted-left"></i> </div>
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="./past.html">Past</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-6"> <a href="./past.html">Register</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-6"> <a href="https://whartonchinasummit.ticketleap.com/2018pwcs" target="_blank">Register</a> </div>
           </div>
         </div>
         <div class="row hide" id="m-close-nav">
@@ -216,7 +216,7 @@
       <div class="left-square"></div>
       <div class="sub-title">April.13th - 15th<br/>University of Pennsylvania</div>
       <div class="vertical-sub-title mobile-hide">
-        A Summit that builds the bridge between us
+        To Build the Bridge Between Us
       </div>
       <div class="vertical-sub-title mobile-only">
         To Build the Bridge Between Us
@@ -228,7 +228,7 @@
         <div class="row">
           <div class="col-10 white-txt crimson-bg ls-1" style="letter-spacing: 3px;">REGISTER</div>
           <div class="col-2 white-bg action-area">
-            <a href="https://whartonchinasummit.ticketleap.com/2018pwcs" class="black-txt"><i class="icofont icofont-dotted-right"></i></a>
+            <a href="https://whartonchinasummit.ticketleap.com/2018pwcs" target="_blank" class="black-txt"><i class="icofont icofont-dotted-right"></i></a>
           </div>
         </div>
       </div>
