--- a/html/past-ch.html
+++ b/html/past-ch.html
@@ -32,7 +32,7 @@
       gtag('js', new Date());
       gtag('config', 'UA-108713232-1');
     </script>
-    <title>PWCS 2018 | Past Summits</title>
+    <title>往届峰会 | 宾大沃顿中美峰会 2018</title>
   </head>
   <body>
 
@@ -51,17 +51,17 @@
         </a>
       </div> -->
       <div class="col-6 right-txt no-padding">
-        <a href="./home-ch.html">
+        <a href="/past">
           <div class="option" id="lang">
             <i class="icofont icofont-globe"></i><br/>
-            <span class="hover-text">中文</span>
+            <span class="hover-text">ENGLISH</span>
           </div>
         </a>
       </div>
       <div class="col-6 right-txt no-padding">
         <div class="option" id="nav">
           <i class="icofont icofont-navigation-menu"></i><br/>
-          <span class="hover-text">Menu</span>
+          <span class="hover-text">菜单</span>
         </div>
       </div>
     </div>
@@ -83,18 +83,19 @@
           <div class="col-5 right-txt">
             <div class="right-txt" style="float:right;">
               <div class="nav-custom-item right-txt">
-                <a href="./home-ch.html">
+                <a href="/home-ch">
                   <i class="icofont icofont-globe"></i>
-                   简体中文
+                    ENGLISH
                 </a>
               </div>
               <div class="nav-custom-item right-txt" id="alt-nav-btn">
                 <i class="icofont icofont-navigation-menu"></i>
-                MENU
+                菜单
               </div>
               <div class="nav-custom-item right-txt register-item">
-                REGISTER
-                <i class="icofont icofont-dotted-right"></i>
+                <a href="https://whartonchinasummit.ticketleap.com/" target="_blank">
+                立即订票
+                <i class="icofont icofont-dotted-right"></i></a>
               </div>
             </div>
           </div>
@@ -103,16 +104,19 @@
       <div class="container mobile-only">
         <div class="row height-100">
           <div class="col-5 register-item">
-            REGISTER
-            <i class="icofont icofont-dotted-right"></i>
+            <a href="https://whartonchinasummit.ticketleap.com/" target="_blank">
+            立即订票
+            <i class="icofont icofont-dotted-right"></i></a>
           </div>
           <div class="col-3 no-padding right-txt">
+            <a href="/past">
             <i class="icofont icofont-globe"></i>
-            中文
+              ENGLISH
+            </a>
           </div>
           <div class="col-4 no-padding center-txt" id="m-alt-nav-btn">
             <i class="icofont icofont-navigation-menu"></i>
-            Menu
+            菜单
           </div>
         </div>
       </div>
@@ -125,44 +129,44 @@
       <div class="vertical-center mobile-hide">
         <div class="row center-txt">
           <div class="col-12">
-            <a href="#"><div class="navigation-action-btn">Register</div></a>
+            <a href="https://whartonchinasummit.ticketleap.com/" target="_blank"><div class="navigation-action-btn">立即注册</div></a>
           </div>
         </div>
         <div class="row">
           <div class="col-12 col-md-12 row menu-items">
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-0"> <a href="./home.html">Home</a></div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="./about.html">About</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-1"> <a href="./panels.html">Panels</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="./panels.html">Speakers</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="./agenda.html">Agenda</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-5"> <a class="active-item" href="./past.html">Past</a> <i class="icofont icofont-dotted-left"></i> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-0"> <a href="/home">峰会主页</a></div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="/about">关于我们</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-1"> <a href="/panels">论坛板块</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="/panels">参会嘉宾</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/agenda">峰会日程</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-5"> <a class="active-item" href="/past">往届峰会</a> <i class="icofont icofont-dotted-left"></i> </div>
           </div>
         </div>
         <div class="row center-txt">
           <div class="col-4 offset-2 col-md-2 offset-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://www.hotmail.com">
+              <a href="https://www.facebook.com/whartonPWCS" target="_blank">
                 <i class="icofont icofont-social-facebook"></i>
               </a>
             </div>
           </div>
           <div class="col-4 col-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://www.hotmail.com">
+              <a href="../assets/images/wechat-code.jpeg" target="_blank">
                 <i class="icofont icofont-social-wechat"></i>
               </a>
             </div>
           </div>
           <div class="col-4 offset-2 col-md-2 offset-md-0 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://www.hotmail.com">
+              <a href="https://weibo.com/whartonchinasummit" target="_blank">
                 <i class="icofont icofont-social-weibo"></i>
               </a>
             </div>
           </div>
           <div class="col-4 col-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://www.hotmail.com">
+              <a href="mailto:official@whartonsummit.org" target="_blank">
                 <i class="icofont icofont-email"></i>
               </a>
             </div>
@@ -172,18 +176,18 @@
       <div class="verticl-center mobile-only">
         <div class="row">
           <div class="col-12 center-txt m-menu-title">
-            MENU
+            菜单
           </div>
         </div>
         <div class="row">
           <div class="col-12 col-md-12 row menu-items center-txt">
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-0"> <a href="./home.html">Home</a></div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="./about.html">About</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-1"> <a href="./panels.html">Panels</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="./panels.html">Speakers</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="./agenda.html">Agenda</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-5"> <a class="active-item" href="./past.html">Past</a> <i class="icofont icofont-dotted-left"></i> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-6"> <a href="./past.html">Register</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-0"> <a href="/home">峰会主页</a></div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="/about">关于我们</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-1"> <a href="/panels">板块论坛</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="/panels">参会嘉宾</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/agenda">峰会日程</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-5"> <a class="active-item" href="/past">往届峰会</a> <i class="icofont icofont-dotted-left"></i> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-6"> <a href="https://whartonchinasummit.ticketleap.com" target="_blank">立即订票</a> </div>
           </div>
         </div>
         <div class="row hide" id="m-close-nav">
@@ -215,16 +219,16 @@
         让我们一起，构筑中美交流的桥梁
       </div>
       <div class="vertical-sub-title mobile-only">
-        构筑中美交流的桥梁
+        让我们一起，构筑中美交流的桥梁
       </div>
-      <div class="page-caption black-shadow">
-         往届 <br/> 峰会
+      <div class="black-shadow">
+         <h1 class="page-caption">往届 <br/> 峰会</h1>
       </div>
       <div class="bottom-square">
         <div class="row">
           <div class="col-10 white-txt crimson-bg ls-1" style="letter-spacing: 3px;">立即购票</div>
           <div class="col-2 white-bg action-area">
-            <a href="#section-temp" class="black-txt"><i class="icofont icofont-dotted-right"></i></a>
+            <a href="https://whartonchinasummit.ticketleap.com" target="_blank" class="black-txt"><i class="icofont icofont-dotted-right"></i></a>
           </div>
         </div>
       </div>
@@ -239,10 +243,10 @@
     <div class="white-bg" id="whitebox">
       <div class="row row-eq-height">
         <div class="col-lg-5 col-sm-12 col-xs-12">
-          <h1 class="year-title">2017</h1>
-          <h1 class="slogan-title">
+          <h2 class="year-title">2017</h2>
+          <h2 class="slogan-title">
             <span>中国看世界: </span>全球化战略的整合<br>
-            <span>世界看中国: </span>供给侧改革的挑战</h1>
+            <span>世界看中国: </span>供给侧改革的挑战</h2>
         </div>
         <div class="col-lg-7 col-sm-12 hidden-xs year-desc">
           <p>如今，中国二字无疑是所有国际论坛上反复提及、不容小视的主角 。这个拥有巨大经济总量、运转市场、和资金储备的国家，其兴盛源于近几十年来的经济变革。</p>
@@ -254,7 +258,7 @@
       </div>
       <div class="row">
         <div class="col-lg-12 col-sm-12 col-xs-12">
-          <h1 id="whycome">往届嘉宾</h1>
+          <h2 id="whycome">往届嘉宾</h2>
         </div>
       </div>
     </div>
@@ -382,8 +386,8 @@
     <div class="white-bg" id="whitebox" style="padding-bottom: 5%;">
       <div class="row row-eq-height">
         <div class="col-lg-5 col-sm-12 col-xs-12">
-          <h1 class="year-title">2016</h1>
-          <h1 class="slogan-title">
+          <h2 class="year-title">2016</h2>
+          <h2 class="slogan-title">
             <span>中国的“新常态”: </span><br/>新增长动力<br>
         </div>
         <div class="col-lg-7 col-sm-12 hidden-xs year-desc">
